--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -797,7 +797,7 @@
 			<key>AdviseFeatures</key>
 			<false/>
 			<key>MLB</key>
-			<string>C17611300J9HMHK1H</string>
+			<string>C02838600QXHWVPAD</string>
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>ProcessorType</key>
@@ -811,9 +811,9 @@
 			<key>SystemProductName</key>
 			<string>MacBookPro14,1</string>
 			<key>SystemSerialNumber</key>
-			<string>C17RFMZZGVC1</string>
+			<string>C02XF3YVHV29</string>
 			<key>SystemUUID</key>
-			<string>B819DA3C-785D-4E0B-8E6A-47B399296A23</string>
+			<string>10DF66D1-E55A-4820-BA1D-CDFDF708F527</string>
 		</dict>
 		<key>UpdateDataHub</key>
 		<true/>
