--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -797,7 +797,7 @@
 			<key>AdviseFeatures</key>
 			<false/>
 			<key>MLB</key>
-			<string>C17611300J9HMHK1H</string>
+			<string>C02832303GUHWVP1H</string>
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>ProcessorType</key>
@@ -811,9 +811,9 @@
 			<key>SystemProductName</key>
 			<string>MacBookPro14,1</string>
 			<key>SystemSerialNumber</key>
-			<string>C17RFMZZGVC1</string>
+			<string>C02X6PYQHV29</string>
 			<key>SystemUUID</key>
-			<string>B819DA3C-785D-4E0B-8E6A-47B399296A23</string>
+			<string>00B6F9E3-4642-4362-B08E-C8CCF29F6E41</string>
 		</dict>
 		<key>UpdateDataHub</key>
 		<true/>
